[package]
name = "heartbeat-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "heartbeat_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.30"
log = "0.4.28"
env_logger = "0.11.8"
toml = "0.9.7"
pyo3-log = "0.13.1"
pyo3-async-runtimes = { version = "0.26.0", features = ["attributes", "tokio-runtime"] }


